# taiko-reth

./: .gitignore  Cargo.toml  Dockerfile  DockerfileTaiko.cross  Makefile  README.md
.github/workflows/: bench.yml  hive.yml  integration.yml  propose.yml  unit.yml
crates/blockchain-tree/: Cargo.toml
crates/blockchain-tree/src/: blockchain_tree.rs  canonical_chain.rs  chain.rs  state.rs
crates/chain-state/src/: test_utils.rs
crates/chainspec/: Cargo.toml
crates/chainspec/res/genesis/taiko/: grimsvotn.json  jolnir.json  katla.json
crates/chainspec/src/: lib.rs  spec.rs  taiko.rs
crates/cli/commands/src/: common.rs  node.rs
crates/consensus/auto-seal/: Cargo.toml
crates/consensus/auto-seal/src/: lib.rs  task.rs
crates/consensus/beacon/: Cargo.toml
crates/consensus/consensus/src/: lib.rs
crates/consensus/debug-client/src/: client.rs
crates/e2e-test-utils/src/: lib.rs  node.rs  transaction.rs
crates/engine-primitives/: Cargo.toml
crates/engine/primitives/: Cargo.toml
crates/engine/tree/: Cargo.toml
crates/engine/util/: Cargo.toml
crates/engine/util/src/: reorg.rs
crates/ethereum-forks/: Cargo.toml
crates/ethereum-forks/src/: hardfork.rs
crates/ethereum/engine/: Cargo.toml
crates/ethereum/engine-primitives/: Cargo.toml
crates/ethereum/engine-primitives/src/: lib.rs  payload.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs  lib.rs
crates/ethereum/node/: Cargo.toml
crates/ethereum/node/src/: launch.rs  node.rs
crates/ethereum/payload/: Cargo.toml
crates/ethereum/payload/src/: lib.rs
crates/evm/: Cargo.toml
crates/evm/execution-types/: Cargo.toml
crates/evm/execution-types/src/: chain.rs  execution_outcome.rs
crates/evm/src/: builder.rs  either.rs  execute.rs  lib.rs  noop.rs  system_calls.rs  test_utils.rs
crates/exex/exex/: Cargo.toml
crates/exex/test-utils/src/: lib.rs
crates/gwyneth/: Cargo.toml  TaikoL1.json
crates/gwyneth/src/: builder.rs  engine_api.rs  exex.rs  lib.rs
crates/gwyneth/tests/: cases.rs  main.rs  mod.rs  test_payload.rs
crates/interfaces/src/: provider.rs
crates/net/discv5/src/: config.rs
crates/net/network/: Cargo.toml
crates/net/network/src/: manager.rs  network.rs
crates/net/peers/src/: trusted_peer.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: engine_api_store.rs
crates/node-core/src/args/: network.rs  utils.rs
crates/node-core/src/engine/: engine_store.rs  skip_fcu.rs
crates/node-taiko/: Cargo.toml
crates/node-taiko/src/: engine.rs  evm.rs  lib.rs  node.rs
crates/node/api/: Cargo.toml
crates/node/api/src/: node.rs
crates/node/builder/: Cargo.toml
crates/node/builder/src/: rpc.rs
crates/node/core/: Cargo.toml
crates/node/core/src/: node_config.rs
crates/node/events/: Cargo.toml
crates/optimism/evm/src/: lib.rs
crates/optimism/payload/src/: builder.rs
crates/payload/basic/: Cargo.toml
crates/payload/basic/src/: lib.rs
crates/payload/builder/: Cargo.toml
crates/payload/builder/src/: database.rs  error.rs  lib.rs  service.rs  taiko.rs
crates/payload/primitives/: Cargo.toml
crates/payload/primitives/src/: lib.rs  traits.rs
crates/payload/taiko/: Cargo.toml
crates/payload/taiko/src/: builder.rs  consts.rs  error.rs  lib.rs
crates/payload/validator/: Cargo.toml
crates/payload/validator/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives-traits/src/constants/: mod.rs
crates/primitives/src/: alloy_compat.rs  block.rs  header.rs  lib.rs  receipt.rs  taiko.rs
crates/primitives/src/chain/: mod.rs  spec.rs  taiko.rs
crates/primitives/src/revm/: env.rs
crates/primitives/src/transaction/: compat.rs  eip1559.rs  mod.rs
crates/revm/: Cargo.toml
crates/revm/src/: database.rs  state_change.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/: Cargo.toml
crates/rpc/rpc-api/src/: debug.rs  engine.rs  eth.rs  lib.rs  taiko.rs  txpool.rs
crates/rpc/rpc-builder/: Cargo.toml
crates/rpc/rpc-builder/src/: lib.rs
crates/rpc/rpc-engine-api/: Cargo.toml
crates/rpc/rpc-engine-api/src/: engine_api.rs
crates/rpc/rpc-eth-types/src/: error.rs  revm_utils.rs
crates/rpc/rpc-server-types/: Cargo.toml
crates/rpc/rpc-server-types/src/: module.rs
crates/rpc/rpc-types-compat/: Cargo.toml
crates/rpc/rpc-types/src/: lib.rs
crates/rpc/rpc/src/: debug.rs  lib.rs  otterscan.rs  taiko.rs  trace.rs  txpool.rs
crates/storage/codecs/: Cargo.toml
crates/storage/codecs/derive/: Cargo.toml
crates/storage/db/: Cargo.toml
crates/storage/db-api/: Cargo.toml
crates/storage/db-common/src/: init.rs
crates/storage/provider/: Cargo.toml
crates/storage/storage-api/: Cargo.toml
crates/taiko/consensus/: Cargo.toml
crates/taiko/consensus/consensus/src/: anchor.rs  lib.rs
crates/taiko/consensus/proposer/: Cargo.toml
crates/taiko/consensus/proposer/src/: client.rs  lib.rs  task.rs
crates/taiko/consensus/src/: anchor.rs  lib.rs
crates/taiko/engine-primitives/: Cargo.toml
crates/taiko/engine-primitives/src/: lib.rs  payload.rs
crates/taiko/evm/: Cargo.toml
crates/taiko/evm/src/: anchor.rs  execute.rs  lib.rs
crates/taiko/node/: Cargo.toml
crates/taiko/node/src/: evm.rs  lib.rs  node.rs
crates/taiko/payload/: Cargo.toml
crates/taiko/payload/builder/: Cargo.toml
crates/taiko/payload/builder/src/: builder.rs  error.rs  lib.rs
crates/taiko/payload/src/: builder.rs  consts.rs  error.rs  lib.rs  payload.rs
crates/taiko/payload/validator/: Cargo.toml
crates/taiko/payload/validator/src/: lib.rs
crates/taiko/primitives/: Cargo.toml
crates/taiko/primitives/src/: l1_origin.rs  lib.rs
crates/taiko/storage/: Cargo.toml
crates/taiko/storage/src/: l1_origin.rs  lib.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: maintain.rs
examples/custom-engine-types/: Cargo.toml
examples/custom-engine-types/src/: main.rs
examples/custom-evm/src/: main.rs
examples/custom-inspector/src/: main.rs
examples/rpc-db/src/: main.rs
examples/stateful-precompile/src/: main.rs
testing/ef-tests/src/: case.rs  models.rs  result.rs  suite.rs
(+79 files in other folders)
