[package]
name = "gwyneth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
required-features = ["gwyneth"]

[lints]
workspace = true


[dependencies]
# reth
reth-payload-builder = { workspace = true, features = ["gwyneth"]}
reth-ethereum-engine-primitives = { workspace = true, features = ["gwyneth"]}
reth-basic-payload-builder = { workspace = true, features = ["gwyneth"]}
reth-ethereum-payload-builder ={ workspace = true, features = ["gwyneth"]}
reth-node-builder = { workspace = true, features = ["gwyneth"]}
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-evm-ethereum.workspace = true
reth-evm.workspace = true
reth-consensus.workspace = true
reth-auto-seal-consensus.workspace = true
reth-beacon-consensus.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true
reth-rpc-engine-api.workspace = true
reth-node-api.workspace = true
reth-tasks.workspace = true
reth-tokio-util.workspace = true
reth-node-events.workspace = true
reth-node-core.workspace = true
reth-exex.workspace = true
reth-chainspec.workspace = true
reth-execution-types.workspace = true
reth-primitives.workspace = true
reth-revm.workspace = true
reth-errors.workspace = true
reth-rpc-api.workspace = true
reth-rpc-layer.workspace = true
reth-db.workspace = true
reth-trie.workspace = true
reth-rpc-builder.workspace = true

# ethereum
reth-node-ethereum.workspace = true
alloy-serde.workspace = true

# misc
futures-util.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true , features = ["sync"]}
tokio-stream.workspace = true
futures.workspace = true
alloy-rlp.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonrpsee.workspace = true
revm.workspace = true

# alloy
alloy-sol-types = { workspace = true, features = ["json"] }