[package]
name = "reth-taiko-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-primitives = { workspace = true, features = ["taiko"] }
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-payload-builder = { workspace = true, features = ["taiko"] }
reth-basic-payload-builder.workspace = true

# ethereum
revm.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
