[package]
name = "taiko-reth-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-evm.workspace = true
reth-primitives = { workspace = true, features = ["taiko"] }
reth-revm = { workspace = true, features = ["taiko"] }
reth-prune-types.workspace = true
reth-execution-types.workspace = true
reth-consensus.workspace = true

# Taiko
taiko-reth-beacon-consensus.workspace = true

# Ethereum
revm-primitives = { workspace = true, features = ["taiko"] }

# Alloy
alloy-eips.workspace = true
alloy-sol-types.workspace = true

# Misc

[dev-dependencies]
reth-testing-utils.workspace = true
reth-revm = { workspace = true, features = ["test-utils", "taiko"] }
secp256k1.workspace = true
serde_json.workspace = true

[features]
default = ["std"]
std = []
