[package]
name = "taiko-reth-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-node-builder = { workspace = true, features = ["taiko"] }
reth-tracing.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network.workspace = true
reth-consensus.workspace = true
reth-auto-seal-consensus.workspace = true

# taiko
taiko-reth-beacon-consensus.workspace = true
taiko-reth-evm.workspace = true
taiko-reth-engine-primitives.workspace = true
taiko-reth-payload-builder.workspace = true

# misc
eyre.workspace = true
