[package]
name = "taiko-reth-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Taiko primitive types"


[dependencies]
reth-primitives.workspace = true
serde.workspace = true
reth-db-api.workspace = true
reth-codecs.workspace = true


modular-bitfield.workspace = true
bytes.workspace = true
alloy-rlp.workspace = true

[lints]
workspace = true
