[package]
name = "taiko-reth-proposer-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A proposer for the taiko protocol"

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-primitives.workspace = true
reth-execution-errors.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-consensus.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true


# async
futures-util.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

# misc
flate2.workspace = true
alloy-rlp.workspace = true
