[package]
name = "taiko-reth-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A basic ethereum payload builder for reth that uses the txpool API to build payloads."

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec = { workspace = true, features = ["taiko"] }
reth-primitives = { workspace = true, features = ["taiko"] }
reth-revm = { workspace = true, features = ["taiko"] }
reth-transaction-pool.workspace = true
reth-provider.workspace = true
reth-payload-builder.workspace = true
reth-basic-payload-builder.workspace = true
reth-evm = { workspace = true, features = ["taiko"] }
reth-errors.workspace = true

# taiko
taiko-reth-evm.workspace = true
taiko-reth-engine-primitives.workspace = true
taiko-reth-primitives.workspace = true
taiko-reth-provider.workspace = true

# crypto
alloy-rlp.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
